
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_8__ {int msgh_size; int msgh_bits; void* msgh_remote_port; void* msgh_local_port; } ;
struct TYPE_6__ {int type; int disposition; int name; } ;
struct TYPE_5__ {int msgh_descriptor_count; } ;
struct TYPE_7__ {TYPE_4__ header; TYPE_2__ port; TYPE_1__ body; int member_0; } ;
typedef TYPE_3__ port_msg_send_t ;
typedef int msg ;
typedef void* mach_port_t ;
typedef int kern_return_t ;


 int LOG (char*) ;
 int MACH_ERR (char*,int ) ;
 int MACH_MSGH_BITS (int ,int ) ;
 int MACH_MSGH_BITS_COMPLEX ;
 int MACH_MSG_PORT_DESCRIPTOR ;
 int MACH_MSG_TYPE_COPY_SEND ;
 int MACH_MSG_TYPE_MAKE_SEND_ONCE ;
 int MACH_PORT_RIGHT_RECEIVE ;
 int mach_msg_send (TYPE_4__*) ;
 int mach_port_allocate (int ,int ,void**) ;
 int mach_task_self () ;

void do_child(mach_port_t shared_port) {
  kern_return_t err;


  mach_port_t reply_port;
  err = mach_port_allocate(mach_task_self(), MACH_PORT_RIGHT_RECEIVE, &reply_port);
  MACH_ERR("child allocating reply port", err);


  port_msg_send_t msg = {0};

  msg.header.msgh_size = sizeof(msg);
  msg.header.msgh_local_port = reply_port;
  msg.header.msgh_remote_port = shared_port;
  msg.header.msgh_bits = MACH_MSGH_BITS (MACH_MSG_TYPE_COPY_SEND, MACH_MSG_TYPE_MAKE_SEND_ONCE) | MACH_MSGH_BITS_COMPLEX;

  msg.body.msgh_descriptor_count = 1;

  msg.port.name = mach_task_self();
  msg.port.disposition = MACH_MSG_TYPE_COPY_SEND;
  msg.port.type = MACH_MSG_PORT_DESCRIPTOR;

  err = mach_msg_send(&msg.header);
  MACH_ERR("child sending task port message", err);

  LOG("child sent task port back to parent");


  while(1){;}
}
